# code-analyze

./: .gitignore  README.md
backend/: main.py
rust-analyzer/: Cargo.toml
rust-analyzer/src/: main.rs
samples/csharp_demo/: Program.cs
samples/csharp_demo/Models/: User.cs
samples/csharp_demo/Services/: EmailGateway.cs  InvoiceService.cs  NotificationService.cs  ProjectCoordinator.cs  UserRepository.cs
samples/csharp_demo/Utils/: Log.cs
samples/java_demo/src/com/example/: MainApp.java
samples/java_demo/src/com/example/model/: User.java
samples/java_demo/src/com/example/service/: BillingService.java  EmailGateway.java  NotificationService.java  ProjectCoordinator.java  UserRepository.java
samples/java_demo/src/com/example/util/: LoggerUtil.java
samples/python_demo/: main.py
samples/python_demo/app/model/: user.py
samples/python_demo/app/service/: billing_service.py  email_gateway.py  notification_service.py  project_coordinator.py  user_repository.py
samples/python_demo/app/util/: logger_util.py
static/: index.html
