[package]
name = "code_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.22"
tree-sitter-java = "0.21"
tree-sitter-c-sharp = "0.21"
walkdir = "2.5"
rayon = "1.10"
